# SmartGrid

./: .gitignore  CMakeLists.txt  README.md
include/algorithms/: FeasibleGraph.h  FixedParameterTractable.h  Genetic.h  Greedy.h
include/controller/: HandelReq.h  PerformanceCalculator.h
include/server/: api_handler.h
include/structs/: Config.h  Job.h
include/utils/: PeakCost.h  TotalCost.h
src/: main.cpp
src/algorithms/: FeasibleGraph.cpp  FixedParameterTractable.cpp  Genetic.cpp  Greedy.cpp
src/controller/: HandleReq.cpp  PerformanceCalculator.cpp  api_handler.cpp
src/server/: api_handler.cpp
src/utils/: PeakCost.cpp  TotalCost.cpp
tests/: TestMain.cpp
web/: package-lock.json  package.json
web/public/: PeakPowerCost.json  RunningTime.json  Summary.json  TotalPowerCost.json  index.html  manifest.json
web/src/: App.css  App.js
web/src/Chart/: Chart.js
web/src/Footer/: Footer.js
web/src/ScenarioCollapse/: DataSource.js  ScenarioCollapse.js
web/src/Selector/: DataSource.js  Selector.js
